--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -77,7 +77,7 @@
 
 
 
-              <div style="overflow-y:scroll; height:800px"> 
+              <div style="overflow-y:; height:800px"> 
               <table class="table table-hover">
               <thead>
                 <tr>
@@ -91,69 +91,105 @@
                   <tr>
                     <!--> logos=500x500 <-->
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td>Futebol Clube Do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
+                    <td>Sport Lisboa Benfica</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/braga.png" width="50" height="50"/></td>
+                    <td>Sporting Clube de Braga</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Braga</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/scp.png" width="45" height="45"/></td>
+                    <td>Sporting Clube De Portugal</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/moreirense.png" width="50" height="50"/></td>
+                    <td>Moreirense Futebol Clube</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Guimarães</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/vsc.png" width="45" height="45"/></td>
+                    <td>Vitória Sport Clube</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Guimarães</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/belenenses.png" width="50" height="50"/></td>
+                    <td>Belenenses SAD</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/rioave.png" width="45" height="45"/></td>
+                    <td>Rio Ave Futebol Clube</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Vila Do Conde</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/portimonense.png" width="50" height="50"/></td>
+                    <td>Portimonense Sporting Clube</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Portimão</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/santa.png" width="50" height="50"/></td>
+                    <td>Clube Desportivo Santa Clara</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>São Miguel - Açores</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
+                    <td><img src="assets/img/tondela.png" width="50" height="50"/></td>
+                    <td>Clube Desportivo De Tondela</td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Viseu</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/boavista.png" width="50" height="50"/></td>
+                    <td>Boavista Futebol Clube</td>
+                    <td>Primeira</td>
+                    <td>Ramalde - Porto</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/aves.png" width="50" height="50"/></td>
+                    <td>Clube Desportivo Das Aves</td>
+                    <td>Primeira</td>
+                    <td>Vila Das Aves - Santo Tirso</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/maritimo.png" width="50" height="50"/></td>
+                    <td>Club Sport Marítimo</td>
+                    <td>Primeira</td>
+                    <td>Ilha Da Madeira</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/nacional.png" width="50" height="50"/></td>
+                    <td>Clube Desportivo Nacional</td>
+                    <td>Primeira</td>
+                    <td>Ilha Da Madeira</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/chaves.png" width="50" height="50"/></td>
+                    <td>Grupo Desportivo de Chaves</td>
+                    <td>Primeira</td>
+                    <td>Cidade Das Chaves </td> 
+                  </tr>
+                  <tr>
+                    <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
+                    <td>Clube Desportivo Feirense</td>
+                    <td>Primeira</td>
+                    <td>Santa Maria Da Feira</td> 
                   </tr>
 
                 </tbody>
