--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -75,6 +75,14 @@
               </nav>
             &nbsp;
 
+           <div class="row">
+
+            <img src="assets/img/ligaportugal.png" width="350" height="150">
+
+            </div> 
+
+            &nbsp;
+
 
 
               <div style="overflow-y:; height:800px"> 
@@ -89,7 +97,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <!--> logos=500x500 <-->
+                    
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube Do Porto</td>
                     <td>Primeira</td>
