--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -87,7 +87,7 @@
 
               <div style="overflow-y:; height:800px"> 
               <table class="table table-hover">
-              <thead>
+              <thead style="background-color: #ffd633 ">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
