Update Sort Tables

--- a/equipas.html
+++ b/equipas.html
@@ -76,20 +76,20 @@
             &nbsp;
 
 
-
+                <!--> logos=500x500 <-->
               <div style="overflow-y:scroll; height:800px"> 
-              <table class="table table-hover">
+              <table id="myTable" class="table table-hover">
               <thead>
                 <tr>
-                  <th>Logo</th>
-                  <th>Equipa</th>
-                  <th>Competições</th>
-                  <th>Pais</th>
+                  <th >Logo</th>
+                  <th onclick="sortTable(1)">Equipa</th>
+                  <th onclick="sortTable(2)">Competições</th>
+                  <th onclick="sortTable(3)">Pais</th>
                 </tr>
                 </thead>
                 <tbody>
+                  
                   <tr>
-                    <!--> logos=500x500 <-->
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/> </td>
                     <td>Real Madrid</td>
                     <td>Champions</td>
@@ -104,7 +104,7 @@
                  <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Champions / Primeira Liga</td>
+                    <td>Primeira Liga/ Champions</td>
                     <td>Portugal</td>
                   </tr>
                   <tr>
@@ -113,60 +113,17 @@
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
-                  <tr>
-                      <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Real Madrid</td>
+                   <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td>Carlo Clube</td>
                     <td>Champions</td>
-                    <td>Espanha</td> 
+                    <td>França</td>
                   </tr>
                    <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                     <td>Barcelona</td>
-                     <td>Champions</td>
-                     <td>Espanha</td>
-                 </tr>
-                 <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Bayern de Múnich</td>
+                    <td>Carlo Clube</td>
                     <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
+                    <td>França</td>
                   </tr>
 
                 </tbody>
