--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -75,21 +75,21 @@
               </nav>
             &nbsp;
 
-
+              <!--> logos=500x500 <-->
 
               <div style="overflow-y:scroll; height:800px"> 
-              <table class="table table-hover">
+              <table id="myTable" class="table table-hover">
               <thead>
                 <tr>
-                  <th>Logo</th>
-                  <th>Equipa</th>
-                  <th>Competição</th>
-                  <th>Pais</th>
+                  <th >Logo</th>
+                  <th onclick="sortTable(1)">Equipa</th>
+                  <th onclick="sortTable(2)">Competição</th>
+                  <th onclick="sortTable(3)">Pais</th>
                 </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <!--> logos=500x500 <-->
+                    
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Real Madrid</td>
                     <td>Champions</td>
@@ -114,53 +114,22 @@
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                      <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Real Madrid</td>
+                    <td>Manchester City</td>
                     <td>Champions</td>
-                    <td>Espanha</td> 
+                    <td>Inglaterra</td> 
                   </tr>
                    <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                     <td>Barcelona</td>
+                     <td>Atletico de Madrid</td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Bayern de Múnich</td>
+                    <td>Juventus</td>
                     <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/> </td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/> </td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
-                    <td>Champions</td>
-                    <td>Alemanha</td>
+                    <td>Italia</td>
                   </tr>
 
                 </tbody>
