--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -78,13 +78,13 @@
 
 
               <div style="overflow-y:scroll; height:800px"> 
-              <table class="table table-hover">
+              <table id="myTable" class="table table-hover">
               <thead>
                 <tr>
                   <th>Logo</th>
-                  <th>Equipa</th>
-                  <th>Divisão</th>
-                  <th>Região</th>
+                  <th onclick="sortTable(1)">Equipa</th>
+                  <th onclick="sortTable(2)">Divisão</th>
+                  <th onclick="sortTable(3)">Região</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -92,67 +92,67 @@
                     <!--> logos=500x500 <-->
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
+                    <td>Porto</td> 
+                  </tr>
+                  <tr>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td>Sporting Clube de Portugal</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>3ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td>Sporting Lisboa Benfica</td>
+                    <td>1ª</td>
+                    <td>Lisboa</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>1ª</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
-                    <td>Porto</td> 
-                  </tr>
-                  <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
-                    <td>Primeira</td>
+                    <td>Areias</td>
+                    <td>2ª</td>
                     <td>Porto</td> 
                   </tr>
 
