--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -168,24 +168,24 @@
                 &nbsp;
 
                 <div style="overflow-y:scroll; height:350px;"> 
-              <table class="table table-hover" >
+              <table id="myTable" class="table table-hover" >
           
               <thead style="background-color : #e6e600">
                 <tr>
-                  <th>Posição</th>
-                  <th>Equipa</th>
-                  <th>Logo</th> 
-                  <th>J</th>
-                  <th>V</th>
-                  <th>E</th>
-                  <th>D</th>
-                  <th>GM</th>
-                  <th>GS</th>
-                  <th>P</th>
+                  <th onclick="sortTable(0)">Posição</th>
+                  <th onclick="sortTable(1)">Equipa</th>
+                  <th >Logo</th> 
+                  <th onclick="sortTable(3)">J</th>
+                  <th onclick="sortTable(4)">V</th>
+                  <th onclick="sortTable(5)">E</th>
+                  <th onclick="sortTable(6)">D</th>
+                  <th onclick="sortTable(7)">GM</th>
+                  <th onclick="sortTable(8)">GS</th>
+                  <th onclick="sortTable(9)">P</th>
                 </tr>
                   </thead>
                 <tr>
-                    <td> 1º </td>
+                    <td> 01º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -197,7 +197,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 2º </td>
+                    <td> 02º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -209,7 +209,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 3º </td>
+                    <td> 03º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -221,7 +221,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 4º </td>
+                    <td> 04º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -233,7 +233,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 5º </td>
+                    <td> 05º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -245,7 +245,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 6º </td>
+                    <td> 06º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -257,7 +257,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 7º </td>
+                    <td> 07º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -269,7 +269,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 8º </td>
+                    <td> 08º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
@@ -281,7 +281,7 @@
                     <td>46</td> 
                   </tr>
                   <tr>
-                    <td> 9º </td>
+                    <td> 09º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>18</td> 
