--- a/plantel.html
+++ b/plantel.html
@@ -392,7 +392,7 @@
                 </tr> 
  
                  <tr> 
-                    <td> Sede: Estádio do Dragão Via FC Porto, 3º Piso Entrada Poente 4350-451 Portoa </td> 
+                    <td> Sede: Estádio do Dragão Via FC Porto, 3º Piso Entrada Poente 4350-451 Porto </td> 
                 </tr> 
  
                   <tr> 
