--- a/plantel.html
+++ b/plantel.html
@@ -85,8 +85,8 @@
                <h3>Estádio do Dragão</h3>
                <h3>Fundado em 1893</h3>
               </div>
-              <div class="col-md-3">
-               <img src="assets/img/estadiododragao.png" width="700" height="300">
+              <div class="col-md-6">
+               <img src="assets/img/estadiododragao.png" width="100%" height="300">
               </div>
             </div>
      
