Equipa nacional updated

--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -75,16 +75,23 @@
               </nav>
             &nbsp;
 
-           <div class="row">
 
-            <img src="assets/img/ligaportugal.png" width="350" height="150">
+              <div class="row">
+                <div class="col-md-4"></div>
+              <div class="col-md-4">
+                <img src="https://upload.wikimedia.org/wikipedia/pt/7/75/Portugal_FPF.png" width="300px" height="350px"/>
+              </div>
+              <div class="col-md-4"></div>
+              </div>
 
-              <div style="overflow-y:; height:800px"> 
 
 
             &nbsp;
-            </div> 
-              <div style="overflow-y:scroll; height:800px"> 
+
+              <div class="row"style="padding-top: 1%">
+              <div class="col-md-12">
+                *click table to sort
+              <div style="overflow-y:scroll; height:700px"> 
               <table id="myTable" class="table table-hover">
               <thead>
               <thead style="background-color: #ffd633 ">
@@ -99,8 +106,6 @@
                   <tr>
                     
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube do Porto</td>
-                    <td>1ª</td>
                     <td>Futebol Clube Do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
@@ -193,7 +198,7 @@
                     <td><img src="assets/img/chaves.png" width="50" height="50"/></td>
                     <td>Grupo Desportivo de Chaves</td>
                     <td>Primeira</td>
-                    <td>Cidade Das Chaves </td> 
+                    <td>Cidade De Chaves </td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
@@ -205,6 +210,9 @@
                 </tbody>
                 </table>
                 </div>
+
+              </div>
+            </div>
 
 
 
