add href in porto equipna nacional

--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -105,10 +105,10 @@
                 <tbody>
                   <tr>
                     
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Futebol Clube Do Porto</td>
+                    <td><a href="plantel.html"> <img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></a></td>
+                    <td> <a href="plantel.html"> Futebol Clube Do Porto</a></td>
                     <td>Primeira</td>
-                    <td>Porto</td> 
+                    <td><a href="plantel.html"> Porto</a></td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
