--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -95,7 +95,7 @@
               <button class="tablinkL" onclick="openPageL('marcadores', this, '#ff3300')" >Melhores Marcadores</button>
 
 
-              <div id="tabela" class="tabcontentCo">
+              <div id="tabela" class="tabcontentL">
 
                   <div style="overflow-y:scroll; height:350px;"> 
               <table id="myTable" class="table table-hover" >
@@ -340,7 +340,7 @@
 
               <div id="calendario" class="tabcontentL">
 
-              <div style="overflow-y:scroll ; height:270px"> 
+              <div style="overflow-y:scroll ; height:300px"> 
               <table class="table table-hover" >
               <thead style="background-color : #e6e600">
                 <tr>
@@ -375,7 +375,7 @@
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
                   </tr>
-                  <tr>
+                  <tr>  
                     <td> 21/02/2019 </td>
                     <td> 17:00 </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
