update logo fcp

--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -105,14 +105,14 @@
                 <tbody>
                   <tr>
                     
-                    <td><a href="plantel.html"> <img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html"> <img src="assets/img/fcp.png" width="50" height="50"/></a></td>
                     <td> <a href="plantel.html"> Futebol Clube Do Porto</a></td>
                     <td>Primeira</td>
                     <td><a href="plantel.html"> Porto</a></td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
-                    <td>Sport Lisboa Benfica</td>
+                    <td>Sport Lisboa Benfica</td>"
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
