--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -75,9 +75,19 @@
               </nav>
             &nbsp;
 
-              <!--> logos=500x500 <-->
+            <div class="row">
+                <div class="col-md-4"></div>
+              <div class="col-md-4">
+                <img src="https://vignette.wikia.nocookie.net/rio/images/2/2f/Afiliados-Internacional.png/revision/latest?cb=20140512034653&path-prefix=pt-br" width="50%" />
+              </div>
+              <div class="col-md-4"></div>
+              </div>
 
-              <div style="overflow-y:scroll; height:800px"> 
+
+              *click table head to sort
+              <!--logos=500x500 <-->
+
+              <div style="overflow-y:scroll; height:400px"> 
               <table id="myTable" class="table table-hover">
               <thead>
                 <tr>
@@ -136,23 +146,9 @@
                 </table>
                 </div>
 
-
-
-
-
-
-
-
-
-
-
-
             </div>
 
             <div class="col-md-1"></div>
-
-        </div>
-
 
 
 
