--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -97,6 +97,8 @@
 
               <div id="tabela" class="tabcontentL">
 
+                *click table head to sort
+
                   <div style="overflow-y:scroll; height:350px;"> 
               <table id="myTable" class="table table-hover" >
           
