--- a/equipas.html
+++ b/equipas.html
@@ -75,8 +75,9 @@
               </nav>
             &nbsp;
 
+                *click table head to sort
 
-                <!--> logos=500x500 <-->
+                <!--logos=500x500 <-->
               <div style="overflow-y:scroll; height:800px"> 
               <table id="myTable" class="table table-hover">
               <thead>
