--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -79,7 +79,7 @@
               <div class="row">
                 <div class="col-md-4"></div>
               <div class="col-md-4">
-                <img src="https://upload.wikimedia.org/wikipedia/pt/7/75/Portugal_FPF.png" width="300px" height="350px"/>
+                <img src="https://vignette.wikia.nocookie.net/mythology/images/1/12/Portugal.png/revision/latest?cb=20120704163845" width="50%" />
               </div>
               <div class="col-md-4"></div>
               </div>
@@ -90,7 +90,9 @@
 
               <div class="row"style="padding-top: 1%">
               <div class="col-md-12">
-                *click table to sort
+
+                *click table head to sort
+
               <div style="overflow-y:scroll; height:700px"> 
               <table id="myTable" class="table table-hover">
               <thead>
@@ -112,7 +114,7 @@
                   </tr>
                   <tr>
                     <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
-                    <td>Sport Lisboa Benfica</td>"
+                    <td>Sport Lisboa Benfica</td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
