Add Titles in tabs content

--- a/competicoes.html
+++ b/competicoes.html
@@ -90,6 +90,7 @@
 
 
             <div id="primeiraliga" class="tabcontentCo">
+              <h2>Primeira Liga</h2>
 
               <table class="table table-hover">
                 &nbsp;
@@ -128,7 +129,7 @@
 
               <div id="champions" class="tabcontentCo">
 
-                <h2>Grupos</h1>
+                <h2>Champions</h1>
                 <div style="overflow-y:scroll; height:350px">
 
             <div class="row">
