--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -91,7 +91,7 @@
               <div class="row"style="padding-top: 1%">
               <div class="col-md-12">
 
-                *click table head to sort
+                <input type="text" id="myInput" onkeyup="mySearch()" placeholder="Search nome da equipa...(ex: Porto)">
 
               <div style="overflow-y:scroll; height:700px"> 
               <table id="myTable" class="table table-hover">
@@ -99,9 +99,9 @@
               <thead style="background-color: #ffd633 ">
                 <tr>
                   <th>Logo</th>
-                  <th onclick="sortTable(1)">Equipa</th>
-                  <th onclick="sortTable(2)">Divisão</th>
-                  <th onclick="sortTable(3)">Região</th>
+                  <th onclick="sortTable(1)"><img src="https://image.flaticon.com/icons/png/512/36/36861.png" width="15">Equipa</th>
+                  <th onclick="sortTable(2)"><img src="https://image.flaticon.com/icons/png/512/36/36861.png" width="15">Divisão</th>
+                  <th onclick="sortTable(3)"><img src="https://image.flaticon.com/icons/png/512/36/36861.png" width="15">Região</th>
                 </tr>
                 </thead>
                 <tbody>
