--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -120,218 +120,218 @@
                     <td> 01º </td>
                     <td> Porto </td>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
+                    <td>22</td> 
+                    <td>17</td>
+                    <td>13</td>
                     <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td>44</td> 
+                    <td>12</td>   
+                    <td>54</td> 
                   </tr>
                   <tr>
                     <td> 02º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Benfica </td>
+                    <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
+                    <td>21</td> 
+                    <td>16</td>
+                    <td>2</td>
+                    <td>3</td> 
+                    <td>27</td> 
+                    <td>21</td>   
+                    <td>49</td> 
                   </tr>
                   <tr>
                     <td> 03º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
+                    <td> Braga </td>
+                    <td><img src="assets/img/braga.png" width="50" height="50"/></td>
+                    <td>22</td> 
                     <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td>4</td>
+                    <td>3</td> 
+                    <td>40</td> 
+                    <td>21</td>   
+                    <td>49</td> 
                   </tr>
                   <tr>
                     <td> 04º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Sporting </td>
+                    <td><img src="assets/img/scp.png" width="45" height="45"/></td>
+                    <td>22</td> 
+                    <td>14</td>
+                    <td>3</td>
+                    <td>5</td> 
+                    <td>44</td> 
+                    <td>25</td>   
+                    <td>45</td> 
                   </tr>
                   <tr>
                     <td> 05º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
+                    <td> Moreirense </td>
+                    <td><img src="assets/img/moreirense.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>12</td>
+                    <td>2</td>
+                    <td>8</td> 
+                    <td>25</td> 
+                    <td>25</td>   
                     <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
                   </tr>
                   <tr>
                     <td> 06º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Vitória SC </td>
+                    <td><img src="assets/img/vsc.png" width="45" height="45"/></td>
+                    <td>22</td> 
+                    <td>10</td>
+                    <td>5</td>
+                    <td>7</td> 
+                    <td>26</td> 
+                    <td>20</td>   
+                    <td>35</td> 
                   </tr>
                   <tr>
                     <td> 07º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Belenenses </td>
+                    <td><img src="assets/img/belenenses.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>7</td>
+                    <td>9</td>
+                    <td>6</td> 
+                    <td>23</td> 
+                    <td>23</td>   
+                    <td>30</td> 
                   </tr>
                   <tr>
                     <td> 08º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Rio Ave </td>
+                    <td><img src="assets/img/rioave.png" width="45" height="45"/></td>
+                    <td>22</td> 
+                    <td>7</td>
+                    <td>7</td>
+                    <td>8</td> 
+                    <td>33</td> 
+                    <td>34</td>   
+                    <td>28</td> 
                   </tr>
                   <tr>
                     <td> 09º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Santa Clara </td>
+                    <td><img src="assets/img/santa.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>8</td>
+                    <td>3</td>
+                    <td>11</td> 
+                    <td>30</td> 
+                    <td>32</td>   
+                    <td>27</td> 
                   </tr>
                   <tr>
                     <td> 10º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Portimonense </td>
+                    <td><img src="assets/img/portimonense.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>8</td>
+                    <td>3</td>
+                    <td>11</td> 
+                    <td>27</td> 
+                    <td>34</td>   
+                    <td>27</td> 
                   </tr>
                   <tr>
                     <td> 11º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Tondela </td>
+                    <td><img src="assets/img/tondela.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>6</td>
+                    <td>5</td>
+                    <td>11</td> 
+                    <td>16</td> 
+                    <td>33</td>   
+                    <td>23</td> 
                   </tr>
                   <tr>
                     <td> 12º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Boa Vista </td>
+                    <td><img src="assets/img/boavista.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>6</td>
+                    <td>5</td>
+                    <td>11</td> 
+                    <td>17</td> 
+                    <td>27</td>   
+                    <td>23</td> 
                   </tr>
                   <tr>
                     <td> 13º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Marítimo </td>
+                    <td><img src="assets/img/maritimo.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>7</td>
+                    <td>2</td>
+                    <td>13</td> 
+                    <td>13</td> 
+                    <td>25</td>   
+                    <td>23</td> 
                   </tr>
                   <tr>
                     <td> 14º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Nacional </td>
+                    <td><img src="assets/img/nacional.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>6</td>
+                    <td>5</td>
+                    <td>11</td> 
+                    <td>24</td> 
+                    <td>45</td>   
+                    <td>23</td> 
                   </tr>
                   <tr>
                     <td> 15º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> Vitoria De Setúbal </td>
+                    <td><img src="assets/img/vitoria.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>5</td>
+                    <td>7</td>
+                    <td>10</td> 
                     <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td>24</td>   
+                    <td>22</td> 
                   </tr>
                   <tr>
                     <td> 16º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Aves </td>
+                    <td><img src="assets/img/aves.png" width="50" height="50"/></td>
+                    <td>21</td> 
+                    <td>6</td>
+                    <td>3</td>
+                    <td>12</td> 
+                    <td>23</td> 
+                    <td>34</td>   
+                    <td>21</td> 
                   </tr>
                   <tr>
                     <td> 17º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Chaves </td>
+                    <td><img src="assets/img/chaves.png" width="50" height="50"/> </td>
+                    <td>22</td> 
+                    <td>5</td>
+                    <td>4</td>
+                    <td>13</td> 
+                    <td>17</td> 
+                    <td>31</td>   
+                    <td>19</td> 
                   </tr>
 
                 <tr>
                     <td> 18º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>18</td> 
-                    <td>15</td>
-                    <td>1</td>
-                    <td>2</td> 
-                    <td>38</td> 
-                    <td>11</td>   
-                    <td>46</td> 
+                    <td> Feirense </td>
+                    <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
+                    <td>22</td> 
+                    <td>2</td>
+                    <td>8</td>
+                    <td>12</td> 
+                    <td>13</td> 
+                    <td>35</td>   
+                    <td>14</td> 
                   </tr>
                 </tbody>
               </table>
